<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnGetStarted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_started" />

    <Button
        android:id="@+id/btnOperations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operations" />

    <Button
        android:id="@+id/btnExtension"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/extension" />

    <Button
        android:id="@+id/btnRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recyclerView" />

    <Button
        android:id="@+id/btnCollections"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/collections" />

    <Button
        android:id="@+id/btnAnko"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anko" />

</LinearLayout>
