<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".collections.CollectionsActivity">

    <Button
        android:id="@+id/btnMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/map" />

    <Button
        android:id="@+id/btnFlatMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flat_map" />

    <Button
        android:id="@+id/btnFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter" />

</LinearLayout>